--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ serde_json = "1.0"
 peg = "0.8.1"
 itertools = "0.10.5"
 slug = "0.1.4"
-csscolorparser = "0.6.2"
+csscolorparser = { version = "0.6.2", features = ["lab"] }
+indexmap = { version = "1.9.3", features = ["serde"] }
