--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,7 +10,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 peg = "0.8.1"
 itertools = "0.10.5"
-slug = "0.1.4"
+# slug = "0.1.4"
 csscolorparser = { version = "0.6.2", features = ["lab"] }
 indexmap = { version = "1.9.3", features = ["serde"] }
 convert_case = "0.6.0"
+deunicode = "1.3.3"
